--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "start": "node --require @babel/register ./src/index.js",
-    "test": "mocha --require @babel/register './src/**spec.js'"
+    "test": "mocha --require @babel/register './src/**/**spec.js'"
   },
   "author": "Neville <neville.dabreo> (nevil_dabre@yahoo.com)",
   "license": "ISC",
