--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "crs-score",
+  "name": "canada-crs-score",
   "version": "1.0.0",
   "description": "canada crs score live information",
   "main": "./src/index.js",
+  "keywords": ["CRS Score", "Canada PR", "canada permanent resident", "canada immigration"],
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/NevilDabre/crsscore.git"
+  },
   "scripts": {
     "start": "node --require @babel/register ./src/index.js",
     "test": "mocha --require @babel/register './src/**/**spec.js'"
