--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
   "name": "canada-crs-score",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "canada crs score live information",
-  "main": "./src/index.js",
-  "keywords": ["CRS Score", "Canada PR", "canada permanent resident", "canada immigration"],
+  "main": "./lib/index.js",
+  "keywords": [
+    "CRS Score",
+    "Canada PR",
+    "canada permanent resident",
+    "canada immigration"
+  ],
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/NevilDabre/crsscore.git"
+    "type": "git",
+    "url": "https://github.com/NevilDabre/crsscore.git"
   },
   "scripts": {
     "start": "node --require @babel/register ./src/index.js",
-    "test": "mocha --require @babel/register './src/**/**spec.js'"
+    "test": "mocha --require @babel/register './src/**/**spec.js'",
+    "prepublish": "babel src --out-dir lib"
+  },
+  "babel": {
+    "presets": ["es2015"]
   },
   "author": "Neville <neville.dabreo> (nevil_dabre@yahoo.com)",
   "license": "ISC",
@@ -23,6 +32,9 @@
     "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/register": "^7.5.5",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
