--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@neville.dabreo/canada-crs-score",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "canada crs score live information",
   "main": "./lib/index.js",
   "keywords": [
@@ -14,27 +14,25 @@
     "url": "https://github.com/NevilDabre/crsscore.git"
   },
   "scripts": {
-    "start": "node --require @babel/register ./src/index.js",
-    "test": "mocha --require @babel/register './src/**/**spec.js'",
-    "prepublish": "babel src --out-dir lib"
-  },
-  "babel": {
-    "presets": ["es2015"]
+    "start": "nodemon --exec babel-node ./src/index.js",
+    "test": "./node_modules/.bin/mocha --require @babel/register './src/**/**spec.js'",
+    "build": "babel src --out-dir lib",
+    "publish": "npm run build"
   },
   "author": "Neville <neville.dabreo> (nevil_dabre@yahoo.com)",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NevilDabre/crsscore/issues"
+  },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
     "request": "^2.88.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.8.4",
+    "@babel/node": "^7.8.4",
+    "@babel/preset-env": "^7.8.4",
     "chai": "^4.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
@@ -43,6 +41,7 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "nodemon": "^2.0.2"
   }
 }
