--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@neville.dabreo/canada-crs-score",
-  "version": "1.3.0",
+  "version": "1.7.0",
   "description": "canada crs score live information",
-  "main": "./lib/index.js",
+  "main": "lib/index.js",
   "keywords": [
     "CRS Score",
     "Canada PR",
